# handwritingVisual

./: ANNHandwriting.cpp  ANNHandwritingPredict.cpp  ANNHandwritingPredictManual.cpp  ANNHandwritingTrain.cpp  ANN_MLP.cpp  CMakeLists.txt  CThread.h  Convolution.cpp  README.md  classes.txt  common.hpp  cvImgturnaround.cpp  cv_puttextzh.h  cvuiHandwriting.cpp  cvuiHandwritingPredication.cpp  cvuiHandwritingTrain.cpp  cvuiHandwritingTrainDemo.cpp  handwritingPen.cpp  handwritingcnndoubao.cpp  激活函数.ggb  激活函数2.ggb  激活函数求导.ggb
